--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	 <link rel="stylesheet" href="styles/style.css">
-	 <script defer src="scripts/script.js"></script>
-    <title>Modal dialog</title>
+    <link rel="stylesheet" href="styles/style.css" />
+    <title>Gallery slider</title>
   </head>
   <body>
-
+    <div class="root"></div>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
