--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Gallery slider</title>
   </head>
   <body>
-    <div class="root"></div>
+    <div id="root" class="root"></div>
     <script src="scripts/script.js"></script>
   </body>
 </html>
